# automatic-movie-downloader

./: README.md  pyproject.toml
configs/: sample_redirect.yaml
examples/: new_tab_redirect.yaml  xpath_selector.yaml
src/: __init__.py  browser.py  cli.py  config.py  engine.py  steps.py
tests/: test_config.py  test_engine.py  test_steps.py
